# virasana

./: .gitignore  nomerecintos.mdb  pyproject.toml  setup.py  supervisor_virasana.conf  supervisor_virasana_periodic.conf  totaliza.py  tox.ini  ultimo_id_transmitido.txt  wsgi.py  wsgi_debug.py  wsgi_production.py  wsgi_teste.py
virasana/: conf.py  db.py  main.py  views.py
virasana/analises/: image_ratio.py
virasana/analytic_scripts/: dados_transporte_apreensoes.py
virasana/forms/: InspecaoNaoInvasiva.py  filtros.py
virasana/integracao/: __init__.py  acertos_sql.py  carga.py  conformidade_alchemy.py  gmci_alchemy.py  info_ade02.py  jupapi.py  jupiapi.py  xmli.py
virasana/models/: anomalia_lote.py  auditoria.py
virasana/notebooks/: 1_Teste_Processo_Fichas.ipynb  API_Recintos.ipynb  Analises de Conformidade.ipynb  Exemplos XML.html  Exemplos XML.ipynb  GMCIs x Escaneamentos.ipynb  ImportaEmpresasCoana.ipynb  RD-DIRF-DSI.ipynb  RD-Viajantes-Limpo.ipynb  RD-Viajantes-Limpo.py  RD-Viajantes-PorNome-Limpo.py  RD-Viajantes.ipynb  Reefer - visualizar imagens.ipynb  Testa API Login.ipynb  TestaAPIRecintos-2-Copy1.ipynb  TestaAPIRecintos-2.ipynb  TestaAPIRecintos.ipynb  TestaSeleçãoDSIAleatória.ipynb  TransitTimeRedex.ipynb  ex1.xml  ex2.XML  integra_casos_preexistentes.ipynb  integracao_mercante.ipynb  raspagem_api_recintos.ipynb  raspagem_due-resumida.ipynb  raspagem_due.ipynb  raspagem_due_nova.ipynb  sqllocal_narcosstats.ipynb  teste_pesagens_dte.ipynb  virasana_integracao_exemplo.ipynb
virasana/routes/: apirecintos_app.py  bagagens_app.py  conformidade_app.py  (+9 more)
(+80 files in other folders)
